# discard

./: .detoxrc.js  .env.dstack.example  .env.example  .eslintrc.json  .gitignore  .prettierignore  App.tsx  CONTRIBUTING.md  Discord.lnk  LICENSE  README.md  TEST_IMPLEMENTATION_SUMMARY.md  UX-optimization.md  WELCOME.md  app.json  babel.config.js  convex.json  docker-compose.dstack.yaml  docker-compose.prod.yaml  eas.json  global.css  index.js  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  vercel.json
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.maestro/: config.yaml
Discard Misc/: Key Services.txt  TO-DO.txt
DjBraFa/: DjBraFa.m4a  Floating.m4a
__tests__/: setup.ts
app/: _layout.tsx  asset-detail.tsx  auth.tsx  buy-crypto.tsx  connected-wallets.tsx  contacts.tsx  history.tsx  identity.tsx  market-detail.tsx  onboarding.tsx  privacy-settings.tsx  receive.tsx  redemptions.tsx  rwa-purchase.tsx  sell-crypto.tsx  swap.tsx  (+2 more)
programs/discard-hooks/: Cargo.toml
programs/discard-hooks/src/: errors.rs  lib.rs  state.rs
programs/discard-hooks/src/instructions/: confidential_hook.rs  config.rs  emergency.rs  inco_spending.rs  mcc.rs  merchant.rs  mod.rs  transfer_hook.rs  velocity.rs
programs/discard-state/: Cargo.toml
programs/discard-state/src/: error.rs  lib.rs
programs/discard-state/src/instructions/: audit_anchor.rs  card.rs  did.rs  mod.rs  policy.rs  velocity.rs
programs/discard-state/src/state/: audit_anchor.rs  card.rs  did.rs  mod.rs
programs/merchant-registry/: Cargo.toml
programs/merchant-registry/src/: errors.rs  lib.rs  state.rs
programs/merchant-registry/src/instructions/: initialize_registry.rs  mod.rs  register_merchant.rs  revoke_merchant.rs  update_merchant.rs
(+1134 files in other folders)
