[package]
name = "discard-state"
version = "0.1.0"
description = "DisCard 2035 - ZK Compressed State Management for Virtual Cards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "discard_state"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
light-sdk = "0.8.0"
light-hasher = "1.1.0"
light-verifier = "1.1.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1.14.1", features = ["full"] }
