[package]
name = "merchant-registry"
version = "0.1.0"
description = "On-chain merchant registry for DisCard Financial OS"
edition = "2021"
license = "MIT"
repository = "https://github.com/DisCard-Technologies/discard"

[lib]
crate-type = ["cdylib", "lib"]
name = "merchant_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

[dev-dependencies]
anchor-client = "0.30.1"
